# TCPServerMSVSCMake

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json
RTSP/: CMakeLists.txt  RTSP.cpp  RTSP.h  RTSP.hpp  utf.hpp  utils.hpp
RTSP/libs/: CMakeLists.txt
RTSP/libs/include/liveMedia/: OutputFile.hh
RTSP/libs/lib/: BasicUsageEnvironment.lib  UsageEnvironment.lib  glib-2.0.lib  glib-2.0.pc  libcrypto.so.1.1
RTSP/libs/lib/pkgconfig/: libcrypto.pc
TCPServerMSVSCMake/: CMakeLists.txt  Readme.rtf  TCPServerMSVSCMake.cpp  TCPServerMSVSCMake.h  TCPServerMSVSCMake.hpp  a.out
TCPServerMSVSCMake/TCPServerMSVSCMake/: Makefile  cmake_install.cmake
TCPServerMSVSCMake/TCPServerMSVSCMake/libs/: Makefile  cmake_install.cmake
TCPServerMSVSCMake/TESTbuildUNIX/: CMakeCache.txt  Makefile  TCPServerMSVSCMake  cmake_install.cmake
TCPServerMSVSCMake/TESTbuildUNIX/libs/: Makefile
TCPServerMSVSCMake/TESTbuildUNIX/src/: Makefile  cmake_install.cmake
TCPServerMSVSCMake/TESTbuildUNIX/src/client/: Makefile  cmake_install.cmake
TCPServerMSVSCMake/TESTbuildUNIX/src/serv/: Makefile  cmake_install.cmake
TCPServerMSVSCMake/libs/: CMakeLists.txt
TCPServerMSVSCMake/libs/includes/: CMakeLists.txt  config.h
TCPServerMSVSCMake/libs/includes/UsageEnvironment/: UsageEnvironment.hh
TCPServerMSVSCMake/libs/includes/glib-2.0/gio/: gioenumtypes.h
TCPServerMSVSCMake/libs/includes/groupsock/: GroupEId.hh  NetAddress.hh
TCPServerMSVSCMake/libs/includes/libavformat/: adtsenc.d  apngenc.d  av1.d  av1dec.d  avc.d  cafdec.d  demuxer_list.c  dtsdec.d  dtshddec.d  dv.d  dvenc.d  flvenc.d  h264dec.d  hevc.d  jpegxl_probe.d  latmenc.d  libavformat.pc  libavformat.version  mpc8.d  mpegtsenc.d  mxfenc.d  oggparseflac.d  oggparsetheora.d  rtpdec_h261.d  sdp.d  swfdec.d
TCPServerMSVSCMake/libs/includes/libavutil/: error.h  ffversion.h
TCPServerMSVSCMake/libs/includes/liveMedia/: Media.hh
TCPServerMSVSCMake/libs/includes/uv/: unix.h
TCPServerMSVSCMake/libs/lib/: CMakeLists.txt  groupsock.lib  libfdk-aac.la  libmp3lame.la  libopus.la  libssl.so.1.1  libuv.so.1.0.0  pthread.lib  uv_a.lib
TCPServerMSVSCMake/libs/lib/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  opus.pc  vpx.pc  x264.pc
TCPServerMSVSCMake/src/: CMakeLists.txt
TCPServerMSVSCMake/src/serv/: .NetSocketUV.cpp.swp  FF_encoder.cpp  FF_encoder.hpp  Net.cpp  Net.h  Net.hpp  NetBuffer.cpp  NetBuffer.h  NetSock.cpp  NetSock.h  NetSock.hpp  NetSocketUV.cpp  NetSocketUV.h  NetSocketUV.hpp  ProxyServer.cpp  ProxyServer.hpp  RTSP.cpp  RTSP.hpp  ServerUV.cpp  ServerUV.h  ServerUV.hpp  includes.hpp  utf.cpp  utils.cpp  utils.hpp
TCPServerMSVSCMake/testbuidl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  TCPServerMSVSCMake.vcxproj  TCPServerMSVSCMake.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
TCPServerMSVSCMake/testbuidl/libs/: cmake_install.cmake
TCPServerMSVSCMake/testbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  TCPServerMSVSCMake.vcxproj  TCPServerMSVSCMake.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
TCPServerMSVSCMake/testbuild/src/: cmake_install.cmake
TCPServerMSVSCMake/testbuild/src/client/: cmake_install.cmake
TCPServerMSVSCMake/testbuild/src/serv/: cmake_install.cmake
